[gd_scene load_steps=2 format=3 uid="uid://bajfnk64q8mhi"]

[ext_resource type="Script" uid="uid://d0gxh32exbwxl" path="res://assets/player/dash/dash.gd" id="1_4qvqg"]

[node name="Dash" type="Node"]
script = ExtResource("1_4qvqg")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Cooldown" type="Timer" parent="."]
wait_time = 1.8
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
